--- a/estilos.css
+++ b/estilos.css
@@ -10,6 +10,12 @@ head {
 body {
   background-color: papayawhip;
   text-align: justify;
+  font-size: 12pt;
+}
+h2 {
+  font-style: italic;
+  font-weight: 500;
+
 }
 h1 {
   color: rgba(44, 44, 44, 0.842);
@@ -60,4 +66,15 @@ section {
   font-family:monospace;
   letter-spacing: 0.6mm;
   word-spacing: 1mm;
+}
+a:link {
+  text-decoration: none;
+  color:black;
+}
+nav {
+  font-size: 1.4rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-decoration: none;
+  ;
+
 }
