--- a/estilos.css
+++ b/estilos.css
@@ -11,6 +11,7 @@ body {
   background-color: papayawhip;
   text-align: justify;
   font-size: 12pt;
+  font-family: Sora, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 h2 {
   font-style: italic;
