--- a/estilos.css
+++ b/estilos.css
@@ -1,8 +1,8 @@
 header {
   background-color: rgb(245, 232, 208);
   text-align: justify;
-  padding: 2rem;
-color: inherit;
+  padding: 10px;
+  color: inherit;
 }
 head {
   background-color: rgb(245, 232, 208);
@@ -11,12 +11,13 @@ body {
   background-color: papayawhip;
   text-align: justify;
   font-size: 12pt;
-  font-family: Sora, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: Sora, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 0px 5px 0px 5px;
 }
 h2 {
   font-style: italic;
   font-weight: 500;
-
 }
 h1 {
   color: rgba(44, 44, 44, 0.842);
@@ -24,14 +25,15 @@ h1 {
   text-align: center;
   text-overflow: initial;
   text-decoration-line: underline;
-  text-decoration-style:dashed;
+  text-decoration-style: dashed;
   font-size: 14mm;
   font-weight: bold;
+  margin: 0;
 }
 ul {
   text-align: justify;
   list-style: none;
-
+  padding: 0;
 }
 
 #repaso {
@@ -40,12 +42,15 @@ ul {
 
 #sets {
   color: #db5050;
-
 }
 
 h3 {
   letter-spacing: 1px;
   line-height: 2mm;
+}
+
+a:hover {
+  text-decoration: underline;
 }
 
 span {
@@ -64,18 +69,38 @@ iframe {
 }
 
 section {
-  font-family:monospace;
+  font-family: monospace;
   letter-spacing: 0.6mm;
   word-spacing: 1mm;
 }
-a:link {
+a {
   text-decoration: none;
-  color:black;
+  color: black;
 }
 nav {
   font-size: 1.4rem;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   text-decoration: none;
-  ;
+}
 
+body,
+footer {
+  padding: 10px;
+}
+
+nav li {
+  display: inline-block;
+  padding: 0px 25px;
+  width: 100px;
+  text-align: justify;
+}
+
+nav li a {
+  display: inline-block;
+  padding: 5px 25px;
+}
+
+nav li:hover {
+  background-color: antiquewhite;
 }
