--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,7 @@
 header {
   background-color: rgb(245, 232, 208);
   text-align: justify;
-  padding: 10px;
+  padding: 0;
   color: inherit;
 }
 head {
@@ -23,7 +23,6 @@ h1 {
   color: rgba(44, 44, 44, 0.842);
   font-family: Verdana;
   text-align: center;
-  text-overflow: initial;
   text-decoration-line: underline;
   text-decoration-style: dashed;
   font-size: 14mm;
@@ -56,10 +55,18 @@ a:hover {
 span {
   font-weight: bold;
 }
+iframe:hover {
+  border-radius: 50%;
+  transition: all 0.5s;
+ cursor: pointer;
+ transform: rotate(9000deg);
+}
 
 iframe {
   border-radius: 10%;
   border-style: groove;
+  transition: 0.3s;
+
 }
 
 .contactarse {
@@ -90,15 +97,18 @@ footer {
 }
 
 nav li {
+  background-color: #888;
   display: inline-block;
-  padding: 0px 25px;
+  padding: 0px 45px;
   width: 100px;
-  text-align: justify;
+  text-align: center;
 }
+
 
 nav li a {
   display: inline-block;
-  padding: 5px 25px;
+  padding: 5px 0px;
+  ;
 }
 
 nav li:hover {
